Reworked javadoc
Signed-off-by: dumbdemon <huynh.tan37@gmail.com>